<resources>
    <string name="app_name">PokemonGO</string>
    <string name="trainer">Trainer Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderLabel">Gender</string>
    <string name="exampleDisplay">Jorge Lucas</string>
    <string name="pokemon_app">Pokémon App</string>
    <string name="buttonLogin">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recentTabItem">Recents</string>
    <string name="favoritesTabItem">Favorites</string>
    <string name="anyAndEveryTabItem">Any and Every</string>
</resources>