<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/wrapperCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="360dp"
        android:layout_height="170dp"
        android:contentDescription="@string/pokemon_app"
        android:src="@drawable/ic_pokemon_23" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wrapperCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/inputWrapperContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerOnlyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trainerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/trainer"
                android:imeOptions="actionDone">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/inputWrapperContainer"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapperCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="4dp"
            android:text="@string/genderLabel"
            android:textColor="@color/black"
            android:textStyle="normal|bold" />

        <RadioGroup
            android:id="@+id/groupContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/maleOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:buttonTint="@color/blueLight"
                android:text="@string/male"
                android:textStyle="normal|bold" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/femaleOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:buttonTint="@color/blueLight"
                android:text="@string/female"
                android:textStyle="normal|bold" />

        </RadioGroup>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWrapperContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blueLight"
            android:elevation="40dp"
            android:text="@string/buttonLogin"
            android:textColor="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>